--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>E-Commerce</title>
-        <link rel="icon" type="image/png" href="image/logo 1.png">
+        <link rel="icon" type="image/png" href="logo 1.png">
     </head>
     <body>
         <h1>Hello , World</h1>
