--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>E-Commerce</title>
-        <link rel="icon" type="image/x-icon" href="image/logo 1.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Hello , World</h1>
-        <p>I am Manish Yadav , I am the King of this World</p>
+        <p>I am Manish Yadav . I am the King of this World .</p>
     </body>
 </html>
